--- a/GravStab.ipynb
+++ b/GravStab.ipynb
@@ -151,7 +151,7 @@
    "id": "4307fab3",
    "metadata": {},
    "source": [
-    "## Аналитическое нахождение положений равновесия и области устойчивости\n",
+    "## Положения равновесия и области их устойчивости\n",
     "\n",
     "Прежде чем приступать к моделированию найдем положения равновесия нашей системы и исследуем их на асимптотическую устойчивость по линейному приближению, используя теорему Ляпунова и критерий Рауса-Гурвица.\n",
     "\n",
@@ -230,7 +230,7 @@
     "\n",
     "\\begin{equation}\n",
     "G = \\dfrac{1}{R^{6} \\alpha m (R^{2} c l_{0} + m \\mu (- \\alpha^{2} + 2 \\alpha + 1))} \\cdot \\\\\n",
-    "\\cdot \\begin{pmatrix}\n",
+    "\\begin{pmatrix}\n",
     "R^{6} \\alpha \\beta m (R^{2} c l_{0} + m \\mu (- \\alpha^{2} + 2 \\alpha + 1)) &  - R^{3} \\alpha \\beta m \\mu (R^{3} c (\\alpha^{2} - 1) + 3 \\alpha m \\mu (1 - \\alpha)) & 0 & 0 \\\\\n",
     "R^{6} \\alpha m (R^{2} c l_{0} + m \\mu (- \\alpha^{2} + 2 \\alpha + 1)) &  R^{3} (R^{5} c^{2} l_{0} (\\alpha + 1) + R^{2} c m \\mu (R(- 2 \\alpha^{3} + \\alpha^{2} + 4 \\alpha + 1) - 3 \\alpha l_{0}) + 3 \\alpha m^{2} \\mu^{2} \\cdot (2 \\alpha^{2} - 3 \\alpha - 1)) & 6 R^{3} \\alpha c m \\mu^{2} (\\alpha^{2} - 1) + 9 \\alpha^{2} m^{2} \\mu^{3} \\cdot (1 - \\alpha) - R^{6} c^{2} \\mu (\\alpha^{3} + \\alpha^{2} - \\alpha - 1) + R^2 c m \\mu (R (- 2 \\alpha^{3} + \\alpha^{2} + 4 \\alpha + 1) - 3 \\alpha l_{0}) + 3 \\alpha m^{2} \\mu^{2} \\cdot (2 \\alpha^{2} - 3 \\alpha - 1)) & 0 \\\\\n",
     "0 & R^{6} \\alpha \\beta m (R^{2} c l_{0} + m \\mu (- \\alpha^{2} + 2 \\alpha + 1)) & - R^{3} \\alpha \\beta m \\mu (R^{3} c (\\alpha^{2} - 1) + 3 \\alpha m \\mu (1 - \\alpha)) & 0 \\\\\n",
